# rl-pricing

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  lag0.yaml  lag4.yaml
dashboard/: app.py
docs/superpowers/plans/: 2026-03-12-rl-dynamic-pricing.md
docs/superpowers/specs/: 2026-03-12-rl-dynamic-pricing-design.md
pricing_rl/: pyproject.toml
pricing_rl/config/scenarios/: aggressive.yaml  balanced.yaml  conservative.yaml
pricing_rl/dashboard/: app.py
pricing_rl/scripts/: train.py
pricing_rl/src/data/: synthetic_generator.py
pricing_rl/src/environment/: customer.py  pricing_env.py
pricing_rl/src/llm/: prompts.py
pricing_rl/tests/: test_continuous_loop.py
results/: OVERNIGHT_SUMMARY.md  lag_analysis.md  presentation_artifacts.md  results.md
scripts/: evaluate.py  run_loop.py  serve.py  train.py
src/agent/: heuristic_baseline.py  rl_agent.py
src/data/: synthetic_generator.py
src/environment/: customer.py  item.py  market_simulator.py  pricing_env.py
src/evaluation/: ab_test_simulator.py  metrics.py
src/llm/: intent_parser.py  pricing_copilot.py
src/monitoring/: drift_detector.py
src/orchestrator/: multi_agent.py
src/pipeline/: continuous_loop.py
src/reward/: reward_functions.py
tests/: test_ab_test.py  test_agent.py  test_customer.py  test_drift_detector.py  test_environment.py  test_integration.py  test_integration_items.py  test_market_simulator.py  test_metrics.py  test_model_registry.py  test_orchestrator.py  test_pricing_copilot.py  test_reward.py  test_rl_agent.py  test_synthetic_generator.py
(+4 files in other folders)
